environments/gloo-edge-solo-dev-portal/3-solo-dev-portal-config/base/active/httpbin-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'httpbin-cluster1.kapoozi.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            #name: httpbin-httpbin-8000
            name: httpbin-static-upstream
            namespace: gloo-system
